test/bad/functions/return04.px

func f(Int x) Bool def
    return x

f()
